Update 'backend-tests-java-springboot-cunjaokh' component image to: quay.io/rhtap_qe/backend-tests-java-springboot-cunjaokh:8848e2c70bed2b2d80e7561d9b6f211db07a5bcd@sha256:baeaf697ff118f39815f6fe699ad60d7db89f412bfc11dfce0f8b7468bf7ecd7

--- a/components/backend-tests-java-springboot-cunjaokh/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-java-springboot-cunjaokh/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-java-springboot-cunjaokh
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-java-springboot-cunjaokh:8848e2c70bed2b2d80e7561d9b6f211db07a5bcd@sha256:baeaf697ff118f39815f6fe699ad60d7db89f412bfc11dfce0f8b7468bf7ecd7
+          name: container-image
